2005-10-24  Jim Evins  <evins@snaught.com>

	* AUTHORS:
	* src/Makefile.am:
	* src/merge-evolution.c:
	* src/merge-evolution.h:
	* src/merge-init.c: (gl_merge_init):
	* src/merge-properties-dialog.c: (type_changed_cb):
	* src/merge-vcard.c:
	* src/merge-vcard.h:
	* src/ui-commands.c: (gl_ui_cmd_help_about):
		Added Evolution Data Server and VCard merge backends.  Original patch
		provided by Austin Henry <ahenry@users.sourceforge.net>.
	* configure.in:
		Only support EDS and VCard backends if libebook is installed.  Allow
		user to disable support, even if installed.
	
2005-10-24  Jim Evins  <evins@snaught.com>

	* AUTHORS:
	* data/templates/avery-iso-templates.xml:
	* data/templates/avery-us-templates.xml:
	* data/templates/misc-iso-templates.xml:
	* data/templates/zweckform-iso-templates.xml:
		Collected all template changes and submissions since last
		release.

2005-10-23  Jim Evins  <evins@snaught.com>

	* configure.in:
	* data/mime/Makefile.am:
		Added configure options to disable update-mime-database and
		update-desktop-database as part of the install.  Patch
		provided by Leonardo Boshell (qhoracio@sourceforge.net).

2005-10-23  Jim Evins  <evins@snaught.com>

	* libglabels/xml.h:
	* libglabels/xml.c: (gl_xml_get_prop_string),
	(gl_xml_get_prop_i18n_string), (gl_xml_set_prop_string),
	(gl_xml_is_node), (gl_xml_get_node_content):
		Added new XML utility functions.
	* libglabels/xml-paper.c:
	* libglabels/xml-template.c:
	* src/xml-label.c:
		Cleanup by using new xml utilities created above.
	* libglabels/paper.c: (gl_paper_free):
	* src/file.c: (new_response):
	* src/object-editor-image-page.c: (add_image_filters_to_chooser):
	* src/pixbuf-cache.c: (gl_pixbuf_cache_add_pixbuf),
	(gl_pixbuf_cache_get_pixbuf):
	* src/ui-property-bar.c:
	(gl_ui_property_bar_construct_color_combo):
	* src/view-highlight.c: (gl_view_highlight_finalize):
	* src/view-image.c: (update_object_from_editor_cb):
	* src/view.c: (gl_view_finalize), (draw_bg_fg_layers),